--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -8,8 +8,9 @@
 	left: 4%;
 	z-index: 25;
 	margin: 0;
+	width: 110px;
 		img {
-			width: 50%;
+			width: 100%;
 		}
 	display: none; 
 	transform: translateY(-5px);
@@ -19,13 +20,6 @@
 	display: inherit;
 }
 
-@media (min-width: 450px) {
-	.logo {
-		img {
-			width: 40%;
-		}
-	}
-}
 
 /**
  * HAMBURGER TOGGLE MENU
@@ -67,7 +61,7 @@
 .secondary-nav { 
 	background: $aqua-blue;
 	width: 100%;
-	height: 10%;
+	height: 100px;
 	position: fixed;
 }
 
@@ -95,8 +89,15 @@
 	i {
 		color: $reverse;
 	}
-
+	// .nav-logo {
+	// 	position: fixed;
+	// 	top: 4%;
+	// 	left: 4%;
+	// 	z-index: 500;
+	// }
 }
+
+
 
 .nav-menu-content {
 	font-family: $black;
@@ -157,9 +158,8 @@
 }
 
 
-
 /* Larger than tablet */
-@media (min-width: 750px) {
+@media (min-width: 400px) {
 
 	.nav-menu-content,
 	.nav-about-text {
@@ -189,8 +189,6 @@
 		.menu-list-items {
 			a:hover {
 			color: $salmon;
-			// color: rgba(254,254,230, 0.5);
-			// text-decoration: underline;
 			}
 		}
 		.social-main-nav {
@@ -202,7 +200,7 @@
 
 	.nav-about-text {
 		h2 {
-			font-size: 1.6em;
+			font-size: 1.4em;
 			line-height: 1.2em;
 		}
 		p {
@@ -210,6 +208,14 @@
 		}
 	}
 
+}
+
+@media (min-width: 750px){
+	.nav-about-text {
+		h2 {
+			font-size: 1.6em;
+		}
+	}
 }
 
 @media (min-width: 850px) {
@@ -264,7 +270,6 @@
 		text-transform: uppercase;
 		letter-spacing: 3px;
 		color: rgba(233,68, 68, 0.75);
-		// color: rgba(255, 255, 255, 0.25);
 		span {
 			font-family: $medium;
 			font-size: 10px;
