--- a/css/sass/base/_shame.scss
+++ b/css/sass/base/_shame.scss
@@ -3,19 +3,19 @@
 //**
 
 
-#scroll-down-btn {
-	width: 180px;
-	height: 30px;
-	text-align: center;
-	line-height: 30px;
-	color: $reverse;
-	background: $salmon;
-	text-transform: uppercase;
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	font-size: 10px;
-	letter-spacing: 0.4em;
-	cursor: pointer;
-}
+// #scroll-down-btn {
+// 	width: 180px;
+// 	height: 30px;
+// 	text-align: center;
+// 	line-height: 30px;
+// 	color: $reverse;
+// 	background: $salmon;
+// 	text-transform: uppercase;
+// 	position: absolute;
+// 	bottom: 0;
+// 	left: 50%;
+// 	transform: translateX(-50%);
+// 	font-size: 10px;
+// 	letter-spacing: 0.4em;
+// 	cursor: pointer;
+// }
