--- a/css/sass/pages/_graphic_design.scss
+++ b/css/sass/pages/_graphic_design.scss
@@ -95,7 +95,7 @@
 
 .design-portfolio-items {
 	p {
-		@include portfolio-captionitalic;
+		@include captiontext;
 	}
 	article {
 		margin-bottom: 5px;
