--- a/css/main.css
+++ b/css/main.css
@@ -258,6 +258,14 @@ html.fp-enabled,
 /**
  * main flex-container
  */
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box; }
+
 img {
   width: 100%; }
 
@@ -1120,7 +1128,8 @@ a:hover, a:focus {
   width: 50px;
   height: 50px; }
   .pulse .pulse-button {
-    stroke: #E94444; }
+    stroke: #E94444;
+    text-align: center; }
 
 /* Pixi Js */
 .rendererView {
