--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -5,6 +5,15 @@
  * main flex-container
  */
 
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box; 
+}
+
 img {
 	width: 100%;
 }
