--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -34,11 +34,17 @@ $light-blue: #98c2d8;
 $warm-grey: #1D2831;
 $cobolt-blue: #0176EA;
 
-/* project two colors */ 
+/* project two colors */
 $bright-blue: #2100A4;
 $pink: #f8abac;
 $light-salmon: #f56d6f;
 $light-red: #FF4533;
+
+/* chatbot blue colors */
+$chatbot-primary: #749CD1;
+$chatbot-blue01: #50659C;
+$chatbot-blue02: #688DBD;
+$chatbot-red: #FF7668;
 
 html {
 	background: $aqua-blue;
