--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -17,6 +17,7 @@
 
 // Specific project styles, add any section specific sass modules here
 @import "pages/home";
+@import "pages/chatbot";
 @import "pages/prototype";
 @import "pages/ui";
 @import "pages/graphic_design";
