--- a/css/main.css
+++ b/css/main.css
@@ -1002,11 +1002,10 @@ a:hover, a:focus {
 /* FOOTER
    ========================================================================== */
 .footer {
-  height: 280px;
-  margin-top: 10px; }
+  margin-top: 10px;
+  margin-bottom: 0px; }
   .footer .main-footer {
-    text-align: center;
-    margin-bottom: 20px; }
+    text-align: center; }
     .footer .main-footer p,
     .footer .main-footer i {
       color: #FEFEE6; }
@@ -1039,7 +1038,7 @@ a:hover, a:focus {
 
 @media (min-width: 650px) {
   .footer {
-    margin-bottom: 30px; }
+    margin-bottom: 0px; }
     .footer .main-footer {
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
@@ -1255,9 +1254,6 @@ a:hover, a:focus {
 
 /* USER INTERFACE CASE STUDY / bluey
    ========================================================================== */
-html {
-  background: #749CD1; }
-
 /**
  CHATBOT NAVIGATION
  ---------------------------------*/
@@ -1412,6 +1408,12 @@ html {
     font-size: 1.3em;
     line-height: 1.2;
     font-family: proxima_medium, sans-serif; }
+
+/**
+	 Chatbot footer
+ 	 ---------------------------------*/
+.chatbot-main-wrapper {
+  background: #749CD1; }
 
 /* PROTOTYPE CASE STUDY / BIRD NERD
    ========================================================================== */
