--- a/css/sass/components/_footer.scss
+++ b/css/sass/components/_footer.scss
@@ -2,11 +2,12 @@
    ========================================================================== */
 
 .footer {
-	height: 280px;
+	// height: 280px;
 	margin-top: 10px;
+	margin-bottom: 0px;
 	.main-footer {
 		text-align: center;
-		p, 
+		p,
 		i {
 			color: $reverse;
 		}
@@ -18,7 +19,6 @@
 			margin: 5px;
 			font-size: 1.3em;
 		}
-		margin-bottom: 20px;
 	}
 
 	.backtop-btn {
@@ -33,7 +33,6 @@
 			width: 45%;
 			padding: 0px;
 			margin: 0 auto 20px;
-
 		}
 		margin-bottom: 20px;
 		p:first-of-type {
@@ -52,10 +51,10 @@
 		margin-bottom: 30px;
 	}
 }
-	
+
 @media (min-width: 650px) {
 	.footer {
-		margin-bottom: 30px;
+		margin-bottom: 0px;
 		.main-footer {
 			flex-direction: row;
 			text-align: left;
@@ -94,5 +93,3 @@
 		}
 	}
 }
-
-
