--- a/css/sass/pages/_chatbot.scss
+++ b/css/sass/pages/_chatbot.scss
@@ -1,10 +1,6 @@
 /* USER INTERFACE CASE STUDY / bluey
    ========================================================================== */
 
-html {
-  background: $chatbot-primary;
-}
-
 /**
  CHATBOT NAVIGATION
  ---------------------------------*/
@@ -209,4 +205,12 @@ html {
 			font-family: $medium;
 		}
 	}
+}
+
+/**
+	 Chatbot footer
+ 	 ---------------------------------*/
+
+.chatbot-main-wrapper {
+  background: $chatbot-primary;
 }
