--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -22,7 +22,7 @@
 
 
 /**
- * HAMBURGER TOGGLE MENU
+ * PORTFOLIO TOGGLE MENU
  */
 
 .navbar-toggle {
@@ -32,23 +32,11 @@
 	z-index: 20;
 	cursor: pointer;
 
-	#menu {
-  width:50px;
-	}
-
-.hamburger-container {
-		width: 40px;
-		height: 20px;
-		overflow: hidden;
-
-
-		.menu-bar {
-		  background: $salmon;
-		  width: 40px;
-		  height: 2px;
-	 	 	margin-bottom: 6px;
-	 	 	transform: translateX(10px)
-		}
+	p {
+		font-family: $black;
+		color: $salmon;
+		letter-spacing: 1px;
+		transform: translateY(-2px);
 	}
 }
 
