--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -11,7 +11,7 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 img {
@@ -29,6 +29,7 @@ img {
   max-width: 960px;
   padding: 30px;
   height: 100vh;
+  margin: 0 auto;
 }
 
 .fullpage-section {
@@ -204,7 +205,7 @@ img {
     align-content: center;
 }
 .contentStretch {
-    align-content: stretch; 
+    align-content: stretch;
 }
 .flexNone {
     flex: 0 0 auto;
